--- a/client/dockerfile
+++ b/client/dockerfile
@@ -21,8 +21,8 @@ COPY --from=builder /build/.next/standalone .
 COPY --from=builder /build/.next/static ./.next/static
 COPY public ./public
 
-RUN addgroup --system --gid 1001 nodejs && \
-  adduser --system --uid 1001 --ingroup nodejs nextjs && \
+RUN addgroup --system nodejs && \
+  adduser --system --ingroup nodejs nextjs && \
   chown -R nextjs:nodejs /app
 
 USER nextjs
