--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: action/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Docker Login
         uses: docker/login-action@v2
