--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor}}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CHCR_PAT }}
 
       - name: Client Build
         uses: docker/build-push-action@v4
