--- a/.github/workflows/db-build.yml
+++ b/.github/workflows/db-build.yml
@@ -1,4 +1,4 @@
-name: Image Build and Push
+name: DB Image Build and Push
 
 on:
   push:
@@ -7,27 +7,12 @@ on:
     paths:
       - db/**
 
-permissions:
-  contents: write
-  packages: write
-
 jobs:
-  make-image-for-package:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Docker Login
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor}}
-          password: ${{ secrets.CHCR_PAT }}
-
-      - name: DB Build
-        uses: docker/build-push-action@v4
-        with:
-          context: db
-          push: true
-          tags: ghcr.io/${{ secrets.REGISTRY_VARIABLE }}/db:latest
+  build:
+    uses: ./.github/workflows/reusable-docker-build.yml
+    with:
+      context: db
+      image_name: db
+    secrets:
+      REGISTRY_VARIABLE: ${{ secrets.REGISTRY_VARIABLE }}
+      CHCR_PAT: ${{ secrets.CHCR_PAT }}
