--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set Up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Docker Login
         uses: docker/login-action@v2
         with:
@@ -39,3 +42,4 @@ jobs:
           context: ${{ inputs.context }}
           push: true
           tags: ghcr.io/${{ secrets.REGISTRY_VARIABLE }}/${{ inputs.image_name }}:latest
+          platform: linux/amd64,linux/arm64
