fix: 플랫폼 명시 - 다른 서비스들은 괜찮으나 DB와 이미지의 특성상 아키텍처에 맞는 이미지 생성이 필요하다고 함

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,4 +1,6 @@
-FROM bitnami/postgresql:latest
+FROM --platform=$BUILDPLATFORM bitnami/postgresql:latest AS builder
+
+FROM --platform=$TARGETPLATFORM bitnami/postgresql:latest
 
 ENV POSTGRESQL_PORT_NUMBER=5488 \
   POSTGRESQL_DATABASE=blog
