--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -42,4 +42,4 @@ jobs:
           context: ${{ inputs.context }}
           push: true
           tags: ghcr.io/${{ secrets.REGISTRY_VARIABLE }}/${{ inputs.image_name }}:latest
-          platform: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64
