feat: api SSL 인증서 준비

--- a/proxy/conf.d/yunho.conf
+++ b/proxy/conf.d/yunho.conf
@@ -8,7 +8,17 @@ upstream api {
 
 server {
   listen 80;
+  server_name yunho.dev www.yunho.dev;
+
+  return 301 https://$host$request_uri;
+}
+
+server {
+  listen 443 ssl;
   server_name yunho.dev;
+
+  ssl_certificate /etc/letsencrypt/live/yunho.dev/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/yunho.dev/privkey.pem;
 
   location / {
     proxy_pass http://client;
@@ -21,6 +31,10 @@ server {
 server {
   listen 80;
   server_name api.yunho.dev;
+
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
 
   location / {
     proxy_pass http://api;
