--- a/proxy/conf.d/yunho.conf
+++ b/proxy/conf.d/yunho.conf
@@ -8,38 +8,39 @@ upstream api {
 
 server {
   listen 80;
-  server_name yunho.dev www.yunho.dev;
-
-  return 301 https://$host$request_uri;
-}
-
-server {
-  listen 443 ssl;
-  server_name yunho.dev;
-
-  ssl_certificate /etc/letsencrypt/live/yunho.dev/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/yunho.dev/privkey.pem;
-
-  location / {
-    proxy_pass http://client;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  }
-}
-
-server {
-  listen 80;
-  server_name api.yunho.dev;
+  server_name yunho.dev www.yunho.dev api.yunho.dev;
 
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
   }
 
-  location / {
-    proxy_pass http://api;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  }
+  return 301 https://$host$request_uri;
 }
+
+# server {
+#   listen 443 ssl;
+#   server_name yunho.dev;
+
+#   # 인증 후 키 저장
+
+#   location / {
+#     proxy_pass http://client;
+#     proxy_set_header Host $host;
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#   }
+# }
+
+# server {
+#   listen 443 ssl;
+#   server_name api.yunho.dev;
+
+#   # 인증 후 키 저장
+
+#   location / {
+#     proxy_pass http://api;
+#     proxy_set_header Host $host;
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#   }
+# }
