--- a/proxy/conf.d/yunho.conf
+++ b/proxy/conf.d/yunho.conf
@@ -12,6 +12,7 @@ server {
 
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
+    try_files $uri =404;
   }
 
   return 301 https://$host$request_uri;
