--- a/proxy/conf.d/yunho.conf
+++ b/proxy/conf.d/yunho.conf
@@ -12,38 +12,47 @@ server {
 
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
-    try_files $uri =404;
   }
 
+  return 301 https://$host$request_uri;
+}
+
+server {
+  listen 443 ssl;
+  server_name yunho.dev;
+
+  ssl_certificate /etc/letsencrypt/live/api.yunho.dev/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
+
   location / {
-    return 301 https://$host$request_uri;
+    proxy_pass http://client;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
 }
 
-# server {
-#   listen 443 ssl;
-#   server_name yunho.dev;
+server {
+  listen 443 ssl;
+  server_name www.yunho.dev;
 
-#   # 인증 후 키 저장
+  ssl_certificate /etc/letsencrypt/live/api.yunho.dev/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
 
-#   location / {
-#     proxy_pass http://client;
-#     proxy_set_header Host $host;
-#     proxy_set_header X-Real-IP $remote_addr;
-#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#   }
-# }
+  return 301 https://yunho.dev$request_uri;
+}
 
-# server {
-#   listen 443 ssl;
-#   server_name api.yunho.dev;
+server {
+  listen 443 ssl;
+  server_name api.yunho.dev;
 
-#   # 인증 후 키 저장
+  ssl_certificate /etc/letsencrypt/live/api.yunho.dev/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
 
-#   location / {
-#     proxy_pass http://api;
-#     proxy_set_header Host $host;
-#     proxy_set_header X-Real-IP $remote_addr;
-#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#   }
-# }
+  location / {
+    proxy_pass http://api;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
+}
