fix: build-args string 형식으로 변환

--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -11,7 +11,7 @@ on:
         type: string
       build_args:
         required: false
-        type: object
+        type: string
     secrets:
       REGISTRY_VARIABLE:
         required: true
