--- a/.github/workflows/client-build.yml
+++ b/.github/workflows/client-build.yml
@@ -13,9 +13,7 @@ jobs:
     with:
       context: client
       image_name: client
-      build_args:
-        SET_NODE_ENV: production
-        SET_DOMAIN_NAME: yunho.dev
+      build_args: '{"SET_NODE_ENV": "production", "SET_DOMAIN_NAME": "yunho.dev"}'
     secrets:
       REGISTRY_VARIABLE: ${{ secrets.REGISTRY_VARIABLE }}
       CHCR_PAT: ${{ secrets.CHCR_PAT }}
