--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -43,7 +43,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ${{ inputs.context }}
-          build_args: ${{ toJSON(inputs.build_args) }}
+          build-args: ${{ toJSON(inputs.build_args) }}
           tags: ghcr.io/${{ secrets.REGISTRY_VARIABLE }}/${{ inputs.image_name }}:latest
           platforms: linux/amd64,linux/arm64
           push: true
