--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -9,6 +9,9 @@ on:
       image_name:
         required: true
         type: string
+      build_args:
+        required: false
+        type: string
     secrets:
       REGISTRY_VARIABLE:
         required: true
