--- a/client/dockerfile
+++ b/client/dockerfile
@@ -8,9 +8,11 @@ RUN npm install
 
 ARG SET_NODE_ENV=production
 ARG SET_DOMAIN_NAME=yunho.dev
+ARG SET_EMAIL=e3d305ca3dd159da2aeb67c8994cea36
 
 ENV NODE_ENV=${SET_NODE_ENV}
 ENV DOMAIN_NAME=${SET_DOMAIN_NAME}
+ENV EMAIL=${SET_EMAIL}
 
 COPY . .
 
