fix: 의도치 않았던 동작 수정 - 서버 컴포넌트는 항상 런타임 환경에 동작한다고 함(환경변수) - 에러 내용 세분화

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
     image: ${GHCR_IMAGE_URL}/client:latest
     networks:
       - proxy
+    environment:
+      - NODE_ENV=production
+      - DOMAIN_NAME=${DOMAIN_NAME}
 
   api:
     image: ${GHCR_IMAGE_URL}/api:latest
