--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,5 +1,7 @@
 FROM postgres:15-alpine
 
-COPY init.sql /docker-entrypoint-initdb.d/
+ENV TZ=Asia/Seoul
+
+COPY *.sql /docker-entrypoint-initdb.d/
 
 EXPOSE 5432
