--- a/api/dockerfile
+++ b/api/dockerfile
@@ -6,7 +6,10 @@ WORKDIR /app
 
 COPY requirements.txt .
 
-RUN pip install -r requirements.txt
+RUN apk add --no-cache postgresql-libs && \
+  apk add --no-cache --virtual .build-deps gcc musl-dev postgresql-dev && \
+  pip install -r requirements.txt && \
+  apk --purge del .build-deps
 
 COPY . .
 
