feat: 번역 분석 기능 생성 - 번역 생성이 안되어 있을 경우 요청을 보내는 큐 생성해야 함

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -20,6 +20,17 @@ services:
       - DEPLOY_MODE=development
     volumes:
       - ./api:/app
+  analysis:
+    build: 
+      context: ./analysis
+    container_name: analysis-dev
+    networks:
+      - app-dev
+    environment:
+      - DEPLOY_MODE=development
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+    volumes:
+      - ./analysis:/app
   db:
     build:
       context: ./db
