--- a/proxy/dev_conf.d/default.conf
+++ b/proxy/dev_conf.d/default.conf
@@ -9,7 +9,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
-    
+
+    location /analysis/ {
+        proxy_pass http://analysis-dev:8100/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     location / {
         proxy_pass http://client-dev:3000;
         proxy_set_header Host $host;
