feat: 해석 업로드시 피드백 자동 요청 기능 적용 - 피드백 생산이 완료 되었을 때 알람 기능을 후행 작업으로 진행해야 함 - Pubsub/PWA를 사용해서 구현 계획

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,6 @@ services:
       - proxy
       - db
     environment:
-      - DEPLOY_MODE=production
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
@@ -36,6 +35,14 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - ./analysis/prompt_template:/app/prompt_template
+  
+  cache:
+    image: ${GHCR_IMAGE_URL}/cache:latest
+    networks:
+      - proxy
+    environment:
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
 
   db:
     image: ${GHCR_IMAGE_URL}/db:latest
