feat: 경로 재매핑

--- a/proxy/conf.d/yunho.conf
+++ b/proxy/conf.d/yunho.conf
@@ -6,10 +6,6 @@ upstream api {
   server api:8000;
 }
 
-upstream analysis {
-  server analysis:8100;
-}
-
 server {
   listen 80;
   server_name yunho.dev www.yunho.dev api.yunho.dev;
@@ -53,15 +49,8 @@ server {
   ssl_certificate /etc/letsencrypt/live/api.yunho.dev/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
 
-  location /api/ {
-    proxy_pass http://api/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  }
-
-  location /analysis/ {
-    proxy_pass http://analysis/;
+  location / {
+    proxy_pass http://api;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
