feat: 악성 공격에 대한 최소한의 방어

--- a/proxy/conf.d/yunho.conf
+++ b/proxy/conf.d/yunho.conf
@@ -24,7 +24,27 @@ server {
   ssl_certificate /etc/letsencrypt/live/api.yunho.dev/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
 
+  location /_next/static/ {
+    limit_req zone=static;
+
+    proxy_pass http://client$uri;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
+
+  location /_next/image/ {
+    limit_req zone=static;
+
+    proxy_pass http://client$uri;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
+  
   location / {
+    limit_req zone=general;
+
     proxy_pass http://client;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -50,6 +70,8 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
 
   location / {
+    limit_req zone=general burst=10;
+
     proxy_pass http://api;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
