--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -12,7 +12,7 @@ events {
 
 http {
     limit_req_zone $binary_remote_addr zone=general:10m rate=10r/s;
-    limit_req zone $binary_remote_addr zone=static:10m rate=50r/s;
+    limit_req_zone $binary_remote_addr zone=static:10m rate=50r/s;
 
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
