feat: 정책 설정 위치 변경

--- a/proxy/conf.d/yunho.conf
+++ b/proxy/conf.d/yunho.conf
@@ -10,6 +10,9 @@ server {
   listen 80;
   server_name yunho.dev www.yunho.dev api.yunho.dev;
 
+  # policy
+  include /etc/nginx/conf.d/policy.conf;
+
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
   }
@@ -23,6 +26,9 @@ server {
 
   ssl_certificate /etc/letsencrypt/live/api.yunho.dev/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
+  
+  # policy
+  include /etc/nginx/conf.d/policy.conf;
 
   location /_next/static/ {
     limit_req zone=static;
@@ -59,6 +65,9 @@ server {
   ssl_certificate /etc/letsencrypt/live/api.yunho.dev/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
 
+  # policy
+  include /etc/nginx/conf.d/policy.conf;
+
   return 301 https://yunho.dev$request_uri;
 }
 
@@ -68,6 +77,9 @@ server {
 
   ssl_certificate /etc/letsencrypt/live/api.yunho.dev/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
+
+  # policy
+  include /etc/nginx/conf.d/policy.conf;
 
   location / {
     limit_req zone=general burst=10;
