feat: conditions, locations 로 분할하여 관리 - if문이 location 블록 내부에서만 동작한다고 함

--- a/proxy/conf.d/yunho.conf
+++ b/proxy/conf.d/yunho.conf
@@ -10,14 +10,19 @@ server {
   listen 80;
   server_name yunho.dev www.yunho.dev api.yunho.dev;
 
-  # policy
-  include /etc/nginx/conf.d/policy.conf;
-
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
   }
 
-  return 301 https://$host$request_uri;
+  # policy
+  include /etc/nginx/conf.d/policy_locations.conf;
+
+  location / {
+    # policy
+    include /etc/nginx/conf.d/policy_conditions.conf;
+
+    return 301 https://$host$request_uri;
+  }
 }
 
 server {
@@ -28,7 +33,7 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
   
   # policy
-  include /etc/nginx/conf.d/policy.conf;
+  include /etc/nginx/conf.d/policy_locations.conf;
 
   location /_next/static/ {
     limit_req zone=static;
@@ -51,6 +56,9 @@ server {
   location / {
     limit_req zone=general;
 
+    # policy
+    include /etc/nginx/conf.d/policy_conditions.conf;
+
     proxy_pass http://client;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -66,9 +74,14 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
 
   # policy
-  include /etc/nginx/conf.d/policy.conf;
+  include /etc/nginx/conf.d/policy_locations.conf;
 
-  return 301 https://yunho.dev$request_uri;
+  location / {
+    # policy
+    include /etc/nginx/conf.d/policy_conditions.conf;
+
+    return 301 https://yunho.dev$request_uri;
+  }
 }
 
 server {
@@ -79,10 +92,13 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
 
   # policy
-  include /etc/nginx/conf.d/policy.conf;
+  include /etc/nginx/conf.d/policy_locations.conf;
 
   location / {
     limit_req zone=general burst=10;
+
+    # policy
+    include /etc/nginx/conf.d/policy_conditions.conf;
 
     proxy_pass http://api;
     proxy_set_header Host $host;
