fix: nginx 확장자 변경 파일 수정

--- a/proxy/conf.d/yunho.conf
+++ b/proxy/conf.d/yunho.conf
@@ -15,11 +15,11 @@ server {
   }
 
   # policy
-  include /etc/nginx/conf.d/policy_locations.conf;
+  include /etc/nginx/conf.d/policy_locations.nginx;
 
   location / {
     # policy
-    include /etc/nginx/conf.d/policy_conditions.conf;
+    include /etc/nginx/conf.d/policy_conditions.nginx;
 
     return 301 https://$host$request_uri;
   }
@@ -33,7 +33,7 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
   
   # policy
-  include /etc/nginx/conf.d/policy_locations.conf;
+  include /etc/nginx/conf.d/policy_locations.nginx;
 
   location /_next/static/ {
     limit_req zone=static;
@@ -57,7 +57,7 @@ server {
     limit_req zone=general;
 
     # policy
-    include /etc/nginx/conf.d/policy_conditions.conf;
+    include /etc/nginx/conf.d/policy_conditions.nginx;
 
     proxy_pass http://client;
     proxy_set_header Host $host;
@@ -74,11 +74,11 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
 
   # policy
-  include /etc/nginx/conf.d/policy_locations.conf;
+  include /etc/nginx/conf.d/policy_locations.nginx;
 
   location / {
     # policy
-    include /etc/nginx/conf.d/policy_conditions.conf;
+    include /etc/nginx/conf.d/policy_conditions.nginx;
 
     return 301 https://yunho.dev$request_uri;
   }
@@ -92,13 +92,13 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
 
   # policy
-  include /etc/nginx/conf.d/policy_locations.conf;
+  include /etc/nginx/conf.d/policy_locations.nginx;
 
   location / {
     limit_req zone=general burst=10;
 
     # policy
-    include /etc/nginx/conf.d/policy_conditions.conf;
+    include /etc/nginx/conf.d/policy_conditions.nginx;
 
     proxy_pass http://api;
     proxy_set_header Host $host;
