fix: 정규식이 잘못 적용된 버그 수정

--- a/proxy/dev_conf.d/default.conf
+++ b/proxy/dev_conf.d/default.conf
@@ -11,9 +11,12 @@ server {
     }
 
     location / {
+        include /etc/nginx/conf.d/policy_conditions.nginx;
         proxy_pass http://client-dev:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    include /etc/nginx/conf.d/policy_locations.nginx;
 }
