fix: 정상적인 요청도 요청 제한 한계에 도달함

--- a/proxy/conf.d/yunho.conf
+++ b/proxy/conf.d/yunho.conf
@@ -36,7 +36,7 @@ server {
   include /etc/nginx/conf.d/policy_locations.nginx;
 
   location /_next/static/ {
-    limit_req zone=static;
+    limit_req zone=static burst=50 nodelay;;
 
     proxy_pass http://client$uri;
     proxy_set_header Host $host;
