fix: limit increse

--- a/proxy/conf.d/yunho.conf
+++ b/proxy/conf.d/yunho.conf
@@ -45,7 +45,7 @@ server {
   }
 
   location /_next/image/ {
-    limit_req zone=static;
+    limit_req zone=static burst=50 nodelay;
 
     proxy_pass http://client$uri;
     proxy_set_header Host $host;
@@ -54,7 +54,7 @@ server {
   }
   
   location / {
-    limit_req zone=general;
+    limit_req zone=general burst=10 nodelay;
 
     # policy
     include /etc/nginx/conf.d/policy_conditions.nginx;
