--- a/proxy/dev_conf.d/default.conf
+++ b/proxy/dev_conf.d/default.conf
@@ -11,6 +11,7 @@ server {
     }
 
     location / {
+        limit_req zone=general burst=50 nodelay;
         include /etc/nginx/conf.d/policy_conditions.nginx;
         proxy_pass http://client-dev:3000;
         proxy_set_header Host $host;
