chore: name을 간략하게...

--- a/client/src/app/manifest.json
+++ b/client/src/app/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Juno's playground",
+  "name": "Juno",
   "short_name": "Juno",
   "description": "Welcome to my Hello World :D",
   "icons": [
