style: 배경 이미지 변경 - S3 버킷 이미지 호출

--- a/client/src/app/manifest.json
+++ b/client/src/app/manifest.json
@@ -2,6 +2,7 @@
   "name": "Juno",
   "short_name": "Juno",
   "description": "Welcome to my Hello World :D",
+  "start_url": "/",
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
