fix: manifest - fobidden / client - extra environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       - NODE_ENV=production
       - DOMAIN_NAME=${DOMAIN_NAME}
       - NEXT_PUBLIC_GENIUS_API_KEY=${NEXT_PUBLIC_GENIUS_API_KEY}
+      - NEXT_PUBLIC_VAPID_PUBLIC_KEY=${NEXT_PUBLIC_VAPID_PUBLIC_KEY}
+      - VAPID_PRIVATE_KEY=${VAPID_PRIVATE_KEY}
+      - WEBPUSH_SUBJECT=${WEBPUSH_SUBJECT}
 
   api:
     image: ${GHCR_IMAGE_URL}/api:latest
