--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,6 +8,8 @@ services:
       - app-dev
     environment:
       - NODE_ENV=development
+    env_file:
+      - .env
     volumes:
       - ./client:/app
   api:
