--- a/.github/workflows/client-build.yml
+++ b/.github/workflows/client-build.yml
@@ -15,10 +15,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Create .env file
+        run: |
+          echo "NEXT_PUBLIC_VAPID_PUBLIC_KEY=${{ secrets.VAPID_PUBLIC_KEY }}" >> ./client/.env.local
+          echo "VAPID_PRIVATE_KEY=${{ secrets.VAPID_PRIVATE_KEY }}" >> ./client/.env.local
+          echo "WEBPUSH_SUBJECT=${{ secrets.WEBPUSH_SUBJECT }}" >> ./client/.env.local
+
       - name: Build and Push
-        uses: ./.github/workflows/reusable-docker-build.yml
+        uses: ./.github/actions/docker-build/build-push.yml
         with:
           context: client
           image_name: client
           REGISTRY_VARIABLE: ${{ secrets.REGISTRY_VARIABLE }}
           CHCR_PAT: ${{ secrets.CHCR_PAT }}
+
+      - name: Remove env file
+        run: |
+          rm -f ./client/.env.local
