--- a/.github/workflows/api-build.yml
+++ b/.github/workflows/api-build.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build and Push
-        uses: ./.github/actions/docker-build/build-push.yml
+        uses: ./.github/actions/docker-build
         with:
           context: api
           image_name: api
