feat: AI 피드백 등록 후 클라이언트 푸쉬알람

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -20,6 +20,8 @@ services:
       - app-dev
     environment:
       - DEPLOY_MODE=development
+      - VAPID_PRIVATE_KEY=${VAPID_PRIVATE_KEY}
+      - WEBPUSH_SUBJECT=${WEBPUSH_SUBJECT}
     volumes:
       - ./api:/app
   analysis:
