chore: 오탈자 수정

--- a/proxy/conf.d/yunho.conf
+++ b/proxy/conf.d/yunho.conf
@@ -31,7 +31,7 @@ upstream annual {
 
 server {
   listen 80;
-  server_name yunho.dev www.yunho.dev
+  server_name yunho.dev www.yunho.dev;
 
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
@@ -39,8 +39,8 @@ server {
 }
 
 server {
-  listen 80
-  server_name api.yunho.dev
+  listen 80;
+  server_name api.yunho.dev;
 
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
@@ -48,8 +48,8 @@ server {
 }
 
 server {
-  listen 80
-  server_name annual.yunho.dev
+  listen 80;
+  server_name annual.yunho.dev;
 
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
