feat: SSL 인증서 적용

--- a/proxy/conf.d/yunho.conf
+++ b/proxy/conf.d/yunho.conf
@@ -10,112 +10,132 @@ upstream annual {
   server message-client:3343;
 }
 
+server {
+  listen 80;
+  server_name yunho.dev www.yunho.dev annual.yunho.dev;
+
+  # policy
+  include /etc/nginx/conf.d/policy_locations.nginx;
+
+  location / {
+    # policy
+    include /etc/nginx/conf.d/policy_conditions.nginx;
+
+    return 301 https://$host$request_uri;
+  }
+}
+
+server {
+  listen 443 ssl;
+  server_name yunho.dev;
+
+  ssl_certificate /etc/letsencrypt/live/yunho.dev/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/yunho.dev/privkey.pem;
+  
+  # policy
+  include /etc/nginx/conf.d/policy_locations.nginx;
+
+  location / {
+    limit_req zone=general burst=200 nodelay;
+
+    # policy
+    include /etc/nginx/conf.d/policy_conditions.nginx;
+
+    proxy_pass http://client;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
+}
+
+server {
+  listen 443 ssl;
+  server_name www.yunho.dev;
+
+  ssl_certificate /etc/letsencrypt/live/yunho.dev/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/yunho.dev/privkey.pem;
+
+  # policy
+  include /etc/nginx/conf.d/policy_locations.nginx;
+
+  location / {
+    # policy
+    include /etc/nginx/conf.d/policy_conditions.nginx;
+
+    return 301 https://yunho.dev$request_uri;
+  }
+}
+
+server {
+  listen 443 ssl;
+  server_name api.yunho.dev;
+
+  ssl_certificate /etc/letsencrypt/live/yunho.dev/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/yunho.dev/privkey.pem;
+
+  # policy
+  include /etc/nginx/conf.d/policy_locations.nginx;
+
+  location / {
+    limit_req zone=general burst=50;
+
+    # policy
+    include /etc/nginx/conf.d/policy_conditions.nginx;
+
+    proxy_pass http://api;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
+}
+
+server {
+  listen 443 ssl;
+  server_name annual.yunho.dev;
+
+  ssl_certificate /etc/letsencrypt/live/yunho.dev/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/yunho.dev/privkey.pem;
+
+  # policy
+  include /etc/nginx/conf.d/policy_locations.nginx;
+
+  location / {
+    limit_req zone=general burst=200 nodelay;
+
+    # policy
+    include /etc/nginx/conf.d/policy_conditions.nginx;
+
+    proxy_pass http://annual;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
+}
+
+############## certificate ##############
 # server {
 #   listen 80;
-#   server_name yunho.dev www.yunho.dev
-
+#   server_name yunho.dev www.yunho.dev;
+# 
 #   location /.well-known/acme-challenge/ {
 #     root /var/www/certbot;
 #   }
-
-#   # policy
-#   include /etc/nginx/conf.d/policy_locations.nginx;
-
-#   location / {
-#     # policy
-#     include /etc/nginx/conf.d/policy_conditions.nginx;
-
-#     return 301 https://$host$request_uri;
-#   }
 # }
-
-server {
-  listen 80;
-  server_name yunho.dev www.yunho.dev;
-
-  location /.well-known/acme-challenge/ {
-    root /var/www/certbot;
-  }
-}
-
-server {
-  listen 80;
-  server_name api.yunho.dev;
-
-  location /.well-known/acme-challenge/ {
-    root /var/www/certbot;
-  }
-}
-
-server {
-  listen 80;
-  server_name annual.yunho.dev;
-
-  location /.well-known/acme-challenge/ {
-    root /var/www/certbot;
-  }
-}
-
+# 
 # server {
-#   listen 443 ssl;
-#   server_name yunho.dev;
-
-#   ssl_certificate /etc/letsencrypt/live/api.yunho.dev/fullchain.pem;
-#   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
-  
-#   # policy
-#   include /etc/nginx/conf.d/policy_locations.nginx;
-
-#   location / {
-#     limit_req zone=general burst=200 nodelay;
-
-#     # policy
-#     include /etc/nginx/conf.d/policy_conditions.nginx;
-
-#     proxy_pass http://client;
-#     proxy_set_header Host $host;
-#     proxy_set_header X-Real-IP $remote_addr;
-#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#   }
-# }
-
-# server {
-#   listen 443 ssl;
-#   server_name www.yunho.dev;
-
-#   ssl_certificate /etc/letsencrypt/live/api.yunho.dev/fullchain.pem;
-#   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
-
-#   # policy
-#   include /etc/nginx/conf.d/policy_locations.nginx;
-
-#   location / {
-#     # policy
-#     include /etc/nginx/conf.d/policy_conditions.nginx;
-
-#     return 301 https://yunho.dev$request_uri;
-#   }
-# }
-
-# server {
-#   listen 443 ssl;
+#   listen 80;
 #   server_name api.yunho.dev;
-
-#   ssl_certificate /etc/letsencrypt/live/api.yunho.dev/fullchain.pem;
-#   ssl_certificate_key /etc/letsencrypt/live/api.yunho.dev/privkey.pem;
-
-#   # policy
-#   include /etc/nginx/conf.d/policy_locations.nginx;
-
-#   location / {
-#     limit_req zone=general burst=50;
-
-#     # policy
-#     include /etc/nginx/conf.d/policy_conditions.nginx;
-
-#     proxy_pass http://api;
-#     proxy_set_header Host $host;
-#     proxy_set_header X-Real-IP $remote_addr;
-#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+# 
+#   location /.well-known/acme-challenge/ {
+#     root /var/www/certbot;
+#   }
+# }
+# 
+# server {
+#   listen 80;
+#   server_name annual.yunho.dev;
+# 
+#   location /.well-known/acme-challenge/ {
+#     root /var/www/certbot;
 #   }
 # }
