--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-toggle": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.1",
